Implement lazy loading for hero background image and update hero section markup

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
-  <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
+  <section id="hero" class="d-flex flex-column justify-content-center align-items-center" data-src="assets/img/hero.jpg">
     <div class="hero-container" data-aos="fade-in">
       <h1>Abdeldjalil Chougui</h1>
       <p>I'm <span class="typed" data-typed-items="Software Engineer, Ai Engineer, It Consultant, Freelancer, Entrepreneur"></span></p>
@@ -75,7 +75,7 @@
         - Ai Engineer (Deep Learning, Machine Learning, NLP...) <br>
         - Entrepreneur <br>
         - Freelancer <br>
-        - It Consultant <br>
+        - IT Consultant <br>
       </p>
     </div>
 
