Refactor hero section for improved image loading and update background image path

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
-  <section id="hero" class="d-flex flex-column justify-content-center align-items-center" data-src="assets/img/hero.jpg">
+  <section id="hero" class="d-flex flex-column justify-content-center align-items-center" data-src="img/hero.jpg">
     <div class="hero-container" data-aos="fade-in">
       <h1>Abdeldjalil Chougui</h1>
       <p>I'm <span class="typed" data-typed-items="Software Engineer, Ai Engineer, It Consultant, Freelancer, Entrepreneur"></span></p>
