Update contact information links in index.html for improved accessibility

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>adjalilchougui.github.io</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span><a href="https://abdeldjalilchougui.github.io/">abdeldjalilchougui.github.io</a></span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+213774857141</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Sétif, Algeria</span></li>
                 </ul>
@@ -111,7 +111,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Masters in Data Science and Web Technologies</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>a.chougui@esi-sba.dz</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span><a href="mailto:a.chougui@esi-sba.dz"> a.chougui@esi-sba.dz</a></span></li>
                 </ul>
               </div>
             </div>
