--- a/index.html
+++ b/index.html
@@ -67,14 +67,13 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center" data-src="img/hero.jpg">
     <div class="hero-container" data-aos="fade-in">
       <h1>Abdeldjalil Chougui</h1>
-      <p>I'm <span class="typed" data-typed-items="Software Engineer, Ai Engineer, It Consultant, Freelancer, Entrepreneur"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Solana Builder ⚡, Rustacean 🦀, Software Engineer, IT Consultant"></span></p>
       <p style="color: white; font-weight: bold">
+        - Solana Developer
+        - Backend Engineer (Django, GoLang, Rust) <br>
         - Mobile Developer (Flutter) <br>
-        - Backend Engineer (Flutter, Django, React.js, Next.js, GoLang) <br>
-        - Front End Developer (React.js, Next.js) <br>
+        - Front End Developer (React.js, Next.js, Tailwind, Typescript) <br>
         - Ai Engineer (Deep Learning, Machine Learning, NLP...) <br>
-        - Entrepreneur <br>
-        - Freelancer <br>
         - IT Consultant <br>
       </p>
     </div>
