--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <img src="assets/img/ana.jpg" class="img-fluid" alt="" style="border-radius: 50%; ">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>Building cross-platform Mobile apps with Flutter, scalable backends with Django and Go, and modern web interfaces using React.js and Next.js.</h3>
+            <h3>Building Web3 solutions based on Solana, cross-platform Mobile apps with Flutter, scalable backends with Django, Go and Rust, and modern web interfaces using React.js, Next.js and Tailwind.</h3>
     
             <div class="row">
               <div class="col-lg-6">
@@ -117,8 +117,8 @@
             <p>
 
               I’m eager to learn from others, contribute valuable services, and collaborate on exciting projects 
-              with fellow developers. I’m open to working as a <b>Freelancer</b> and also interested in <b>Teaching and Mentoring</b> 
-              in <b>Mobile or Web Development, AI, or Entrepreneurship</b>.            
+              with fellow developers. I’m open to working as a <b>Blockchain Solana Developer</b> or <b>Software Engineer</b> 
+              and also interested in <b>Teaching and Mentoring</b> in <b>Mobile or Web Development, AI, or Entrepreneurship</b>.            
             </p>
           </div>
         </div>
@@ -137,6 +137,20 @@
         <div class="row skills-content">
 
           <div class="col-lg-6" data-aos="fade-up">
+
+            <div class="progress">
+              <span class="skill">Solana <i class="val">75%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">Rust <i class="val">80%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
 
             <div class="progress">
               <span class="skill">Flutter & Dart <i class="val">100%</i></span>
@@ -294,11 +308,10 @@
               <h5>2024/09 - 2025/07</h5>
               <p><em>Future Tech, Riyadh, SA</em></p>
               <ul>
-                <li>I was fortunate to lead development teams and architect complex software systems.</li>
-                <li>My expertise in both frontend and backend technologies such as Flutter, Django, GoLang, ReactJs and NextJs
-                   allowed me to deliver comprehensive solutions that met the highest standards of quality and performance.</li>
-                <li>I collaborated closely with designers and product managers to ensure that our products not only 
-                  met technical specifications but also provided exceptional user experiences</li>
+                <li>With expertise in Flutter, Django, GoLang, ReactJs, and NextJs, I delivered high-quality, 
+                  end-to-end solutions.</li>
+                <li>Worked closely with designers and product managers to ensure technically sound products 
+                  with excellent user experiences.</li>
               </ul>
             </div>
 
@@ -307,11 +320,9 @@
               <h5>2022/07 - Present</h5>
               <p><em>DARCOS, Remote</em></p>
               <ul>
-                <li>I was fortunate to lead development teams and architect complex software systems.</li>
-                <li>My expertise in backend technologies and infrastructure management allowed me to deliver reliable 
-                  and scalable solutions that met our clients' needs.</li>
-                <li>collaborated closely with ui/ux designers and other team members to ensure high quality web and
-                  mobile apps with seamless integration and efficient workflows</li>
+                <li>Led development teams and architected complex systems.</li>
+                <li>Delivered reliable, scalable solutions through backend and infrastructure expertise.</li>
+                <li>Collaborated with UI/UX designers and teams to build high-quality web and mobile apps.</li>
               </ul>
             </div>
 
@@ -320,10 +331,8 @@
               <h5>2022/11 - 2024/07</h5>
               <p><em>SARL RQAIB, Remote Part-time</em></p>
               <ul>
-                <li>I contributed to the development of computer vision tasks and the mobile application for their 
-                  services and customers.</li>
-                <li>My work involved leveraging my skills in software development and AI to create innovative solutions
-                  that enhanced the user experience and added value to the company's offerings.</li>
+                <li>Contributed to computer vision tasks and mobile app development.</li>
+                <li>Applied software and AI expertise to deliver innovative, user-focused solutions.</li>
               </ul>
             </div>
 
@@ -339,11 +348,9 @@
               <h5>2021/09 - 2022/05</h5>
               <p><em>Hoska Dev, Remote</em></p>
               <ul>
-                <li>I collaborated with a talented team of developers to create innovative mobile apps.</li>
-                <li>My expertise in mobile development allowed me to contribute significantly to the design, development, 
-                  and delivery of high-quality applications that met our clients' needs and exceeded their expectations.</li>
-                <li>I am proud of the mobile solutions we developed at Hoska Dev and the positive impact they had on 
-                  our clients' businesses</li>
+                <li>Collaborated with a skilled team to build innovative mobile apps.</li>
+                <li>Contributed to the design, development, and delivery of high-quality applications.</li>
+                <li>Developed impactful mobile solutions at Hoska Dev that boosted client businesses.</li>
               </ul>
             </div>
 
@@ -352,11 +359,9 @@
               <h5>2021/03 - 2021/09</h5>
               <p><em>Al Wsata Real Estate, Riyadh, SA - Remote</em></p>
               <ul>
-                <li>I played a key role in developing and maintaining critical components of their mobile apps.</li>
-                <li>I also led a team of developers, managing their tasks and ensuring timely project delivery.</li>
-                <li>My responsibilities included handling complex calculations, implementing online streaming 
-                  calls, developing real-time chat features, designing notification systems, and overseeing 
-                  the quality assurance process.</li>
+                <li>Developed and maintained core components of mobile apps.</li>
+                <li>Led a development team, managing tasks and ensuring on-time delivery.</li>
+                <li>Implemented complex features like real-time chat, streaming calls, notifications, and QA processes.</li>
               </ul>
             </div>
 
@@ -365,10 +370,9 @@
               <h5>2020/09 - 2021/03</h5>
               <p><em>Qsimh Startup, Riyadh, SA - Remote</em></p>
               <ul>
-                <li>developed and I supervised maintenance of Qsimh Startup mobile app (which is an innovational e commerce app).</li>
+                <li>Developed and supervised maintenance of Qsimh, an innovative e-commerce app.</li>
                 <li>Collaborated with backend team to deliver new features.</li>
-                <li>I worked in this project on a Complicated Ordering System using Online Payment with concept 
-                  of Coupons for Snapchat Influencers.</li>
+                <li>Built a complex ordering system with online payments and coupon support for Snapchat influencers.</li>
               </ul>
             </div>
             <div class="resume-item">
