--- a/index.html
+++ b/index.html
@@ -277,14 +277,15 @@
             <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
               <h4>Abdeldjalil Chougui</h4>
-              <p><em>An innovative Mobile Developer with an experience of more than 6 years designing and developing systems and apps for companies and startups, a Back End Developer, an Ai Engineer and an Entrepreneur.</em></p>
+              <p><em>An innovative Software Engineer with an experience of more than 6 years designing and developing systems and apps for companies and startups, a Back End Developer, an Ai Engineer and an Entrepreneur.</em></p>
               <ul>
                 <li>Sétif , ALGERIA</li>
                 <li>+213774857141</li>
-                <li>abdeldjalil.di.chougui@gmail.com</li>
+                <li>a.chougui@esi-sba.dz</li>
               </ul>
             </div>
 
+            <br>
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
               <h4>MASTER of Data Science and Web Technologies at <a href="https://www.univ-setif.dz/">UFAS Sétif</a></h4>
@@ -298,6 +299,7 @@
               <p><em>Computer Science</em></p>
               <p>In this degree I studied a lot of modules that can help me understanding the computer science such as : <strong>Algorithms & Data Structure, Computer Architecture, OOP, Information Systems, Language Theory, Data Bases, Operating Systems, Web Development...</strong></p>
             </div>
+
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
@@ -309,8 +311,6 @@
               <ul>
                 <li>With expertise in Flutter, Django, GoLang, ReactJs, and NextJs, I delivered high-quality, 
                   end-to-end solutions.</li>
-                <li>Worked closely with designers and product managers to ensure technically sound products 
-                  with excellent user experiences.</li>
               </ul>
             </div>
 
@@ -349,7 +349,6 @@
               <ul>
                 <li>Collaborated with a skilled team to build innovative mobile apps.</li>
                 <li>Contributed to the design, development, and delivery of high-quality applications.</li>
-                <li>Developed impactful mobile solutions at Hoska Dev that boosted client businesses.</li>
               </ul>
             </div>
 
@@ -358,7 +357,6 @@
               <h5>2021/03 - 2021/09</h5>
               <p><em>Al Wsata Real Estate, Riyadh, SA - Remote</em></p>
               <ul>
-                <li>Developed and maintained core components of mobile apps.</li>
                 <li>Led a development team, managing tasks and ensuring on-time delivery.</li>
                 <li>Implemented complex features like real-time chat, streaming calls, notifications, and QA processes.</li>
               </ul>
@@ -370,7 +368,6 @@
               <p><em>Qsimh Startup, Riyadh, SA - Remote</em></p>
               <ul>
                 <li>Developed and supervised maintenance of Qsimh, an innovative e-commerce app.</li>
-                <li>Collaborated with backend team to deliver new features.</li>
                 <li>Built a complex ordering system with online payments and coupon support for Snapchat influencers.</li>
               </ul>
             </div>
