--- a/index.html
+++ b/index.html
@@ -277,9 +277,13 @@
             <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
               <h4>Abdeldjalil Chougui</h4>
-              <p><em>An innovative Software Engineer with an experience of more than 6 years designing and developing systems and apps for companies and startups, a Back End Developer, an Ai Engineer and an Entrepreneur.</em></p>
+              <p><em>I’m an innovative Mobile Developer with 6+ years of experience building apps and systems for companies 
+                and startups. Beyond mobile, I work as a Backend Developer, AI Engineer, and Entrepreneur. 
+                I’m also a proud Rustacean and Solana developer, always eager to craft impactful solutions 
+                that bring real value to the world. A true geek at heart, I’m obsessed with blockchain and software engineering. 
+                Building, learning, and pushing tech boundaries is not just my career, it’s my playground.</em></p>
               <ul>
-                <li>Sétif , ALGERIA</li>
+                <li>Digital Nomad</li>
                 <li>+213774857141</li>
                 <li>a.chougui@esi-sba.dz</li>
               </ul>
