--- a/index.html
+++ b/index.html
@@ -304,6 +304,17 @@
               <p>In this degree I studied a lot of modules that can help me understanding the computer science such as : <strong>Algorithms & Data Structure, Computer Architecture, OOP, Information Systems, Language Theory, Data Bases, Operating Systems, Web Development...</strong></p>
             </div>
 
+            <br>
+            <h3 class="resume-title">Useful Links</h3>
+              <ul>
+                <li><a href="https://discord.com/users/abdeldjalildichougui">Discord</a></li>
+                <li><a href="https://www.reddit.com/user/OffChainWizard/">Reddit</a></li>
+                <li><a href="https://medium.com/@abdeldjalil.di.chougui">Medium</a></li>
+                <li><a href="https://dev.to/abdeldjalilchougui">Dev.to</a></li>
+                <li><a href="https://mirror.xyz/0x6a05322DD140d22402745B5A5cA37bB710ED0296">Mirror</a></li>
+                <li><a href="https://substack.com/@abdeldjalilchougui">Substack</a></li>
+              </ul>
+
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
