--- a/index.html
+++ b/index.html
@@ -432,42 +432,84 @@
 
         <div class="section-title">
           <h2>Services</h2>
-          <p>I offer end-to-end development services tailored to bring your ideas to life. Whether you're building a mobile app,
-            designing a scalable backend system, or integrating AI-powered features, I provide reliable, efficient, 
-            and modern solutions. My services are built on deep technical expertise, clean architecture, 
-            and a user-first mindset — ensuring every product is both powerful and intuitive.</p>
+          <p>I build end-to-end solutions that turn ideas into real-world products. From crafting high-performance 
+            mobile apps in Flutter, to architecting scalable backends with Django and Go, to creating AI-powered features
+            and blockchain integrations with Rust and Solana — I deliver modern, reliable, and impactful systems. 
+            My work combines deep technical expertise, clean architecture, and a passion for user experience, 
+            ensuring every product is not only powerful but also seamless and intuitive</p>
         </div>
 
         <div class="row">
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
             <div class="icon"><i class="bi bi-briefcase"></i></div>
-            <h4 class="title"><a href="">Lorem Ipsum</a></h4>
-            <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+            <h4 class="title"><a href="">Blockchain & Web3 Development (Rust & Solana)</a></h4>
+            <p class="description">I build decentralized applications, smart contracts, and blockchain integrations 
+              using Rust and Solana, focusing on security and innovation.
+            </p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
             <div class="icon"><i class="bi bi-card-checklist"></i></div>
-            <h4 class="title"><a href="">Dolor Sitema</a></h4>
-            <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
+            <h4 class="title"><a href="">Mobile App Development (Flutter)</a></h4>
+            <p class="description">I design and build high-performance mobile apps with Flutter, ensuring smooth user experiences
+               and cross-platform efficiency.
+            </p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
             <div class="icon"><i class="bi bi-bar-chart"></i></div>
-            <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
-            <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+            <h4 class="title"><a href="">Backend Development (Django & Go & Rust)</a></h4>
+            <p class="description">
+              I develop secure, scalable, and reliable backend systems tailored to support complex applications 
+              and large-scale operations.
+            </p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
             <div class="icon"><i class="bi bi-binoculars"></i></div>
-            <h4 class="title"><a href="">Magni Dolores</a></h4>
-            <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+            <h4 class="title"><a href="">Full-Stack Web Development (React & Next.js & Tailwind)</a></h4>
+            <p class="description">
+              I craft modern, responsive web apps with React and Next.js, combining clean design with seamless functionality.
+            </p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
             <div class="icon"><i class="bi bi-brightness-high"></i></div>
-            <h4 class="title"><a href="">Nemo Enim</a></h4>
-            <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
+            <h4 class="title"><a href="">AI & Computer Vision Solutions</a></h4>
+            <p class="description">
+              I create AI-powered features, including computer vision models, to solve real-world problems 
+              and enhance product capabilities.
+            </p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
             <div class="icon"><i class="bi bi-calendar4-week"></i></div>
-            <h4 class="title"><a href="">Eiusmod Tempor</a></h4>
-            <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
+            <h4 class="title"><a href="">Scalable System Architecture & DevOps</a></h4>
+            <p class="description">
+              I architect systems for performance and reliability, handling deployment, scaling, and maintenance 
+              with modern DevOps practices.
+            </p>
+          </div>
+
+          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
+            <div class="icon"><i class="bi bi-calendar4-week"></i></div>
+            <h4 class="title"><a href="">Technical Consulting</a></h4>
+            <p class="description">
+              I provide expert guidance on technology choices, architecture decisions, and development strategies 
+              to help businesses scale efficiently.
+            </p>
+          </div>
+
+          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
+            <div class="icon"><i class="bi bi-calendar4-week"></i></div>
+            <h4 class="title"><a href="">Code Reviews & Best Practices</a></h4>
+            <p class="description">
+              I review codebases to ensure clean architecture, maintainability, and adherence to industry best practices.
+            </p>
+          </div>
+
+          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
+            <div class="icon"><i class="bi bi-calendar4-week"></i></div>
+            <h4 class="title"><a href="">Teaching & Mentorship</a></h4>
+            <p class="description">
+              I teach software engineering and emerging technologies, mentoring developers to grow their skills 
+              and build impactful solutions.
+            </p>
           </div>
         </div>
 
