--- a/index.html
+++ b/index.html
@@ -441,21 +441,21 @@
 
         <div class="row">
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
-            <div class="icon"><i class="bi bi-briefcase"></i></div>
+            <div class="icon"><i class="bi bi-blockchain"></i></div>
             <h4 class="title"><a href="">Blockchain & Web3 Development (Rust & Solana)</a></h4>
             <p class="description">I build decentralized applications, smart contracts, and blockchain integrations 
               using Rust and Solana, focusing on security and innovation.
             </p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
-            <div class="icon"><i class="bi bi-card-checklist"></i></div>
+            <div class="icon"><i class="bi bi-phone"></i></div>
             <h4 class="title"><a href="">Mobile App Development (Flutter)</a></h4>
             <p class="description">I design and build high-performance mobile apps with Flutter, ensuring smooth user experiences
                and cross-platform efficiency.
             </p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
-            <div class="icon"><i class="bi bi-bar-chart"></i></div>
+            <div class="icon"><i class="bi bi-hdd-network"></i></div>
             <h4 class="title"><a href="">Backend Development (Django & Go & Rust)</a></h4>
             <p class="description">
               I develop secure, scalable, and reliable backend systems tailored to support complex applications 
@@ -463,14 +463,14 @@
             </p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
-            <div class="icon"><i class="bi bi-binoculars"></i></div>
+            <div class="icon"><i class="bi bi-window"></i></div>
             <h4 class="title"><a href="">Full-Stack Web Development (React & Next.js & Tailwind)</a></h4>
             <p class="description">
               I craft modern, responsive web apps with React and Next.js, combining clean design with seamless functionality.
             </p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
-            <div class="icon"><i class="bi bi-brightness-high"></i></div>
+            <div class="icon"><i class="bi bi-cpu"></i></div>
             <h4 class="title"><a href="">AI & Computer Vision Solutions</a></h4>
             <p class="description">
               I create AI-powered features, including computer vision models, to solve real-world problems 
@@ -478,7 +478,7 @@
             </p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
-            <div class="icon"><i class="bi bi-calendar4-week"></i></div>
+            <div class="icon"><i class="bi bi-diagram-3"></i></div>
             <h4 class="title"><a href="">Scalable System Architecture & DevOps</a></h4>
             <p class="description">
               I architect systems for performance and reliability, handling deployment, scaling, and maintenance 
@@ -487,7 +487,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
-            <div class="icon"><i class="bi bi-calendar4-week"></i></div>
+            <div class="icon"><i class="bi bi-people"></i></div>
             <h4 class="title"><a href="">Technical Consulting</a></h4>
             <p class="description">
               I provide expert guidance on technology choices, architecture decisions, and development strategies 
@@ -496,7 +496,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
-            <div class="icon"><i class="bi bi-calendar4-week"></i></div>
+            <div class="icon"><i class="bi bi-code-slash"></i></div>
             <h4 class="title"><a href="">Code Reviews & Best Practices</a></h4>
             <p class="description">
               I review codebases to ensure clean architecture, maintainability, and adherence to industry best practices.
@@ -504,7 +504,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
-            <div class="icon"><i class="bi bi-calendar4-week"></i></div>
+            <div class="icon"><i class="bi bi-mortarboard"></i></div>
             <h4 class="title"><a href="">Teaching & Mentorship</a></h4>
             <p class="description">
               I teach software engineering and emerging technologies, mentoring developers to grow their skills 
