--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
 
         <div class="row">
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
-            <div class="icon"><i class="bi bi-blockchain"></i></div>
+            <div class="icon"><i class="bi bi-currency-bitcoin"></i></div>
             <h4 class="title"><a href="">Blockchain & Web3 Development (Rust & Solana)</a></h4>
             <p class="description">I build decentralized applications, smart contracts, and blockchain integrations 
               using Rust and Solana, focusing on security and innovation.
