--- a/index.html
+++ b/index.html
@@ -97,8 +97,10 @@
             <img src="assets/img/ana.jpg" class="img-fluid" alt="" style="border-radius: 50%; ">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>Building Web3 solutions based on Solana, cross-platform Mobile apps with Flutter, scalable backends with Django, Go and Rust, and modern web interfaces using React.js, Next.js and Tailwind.</h3>
+            <h5>Building Web3 solutions based on Solana, cross-platform Mobile apps with Flutter, 
+              scalable backends with Django, Go and Rust, and modern web interfaces using React.js, Next.js and Tailwind.</h5>
     
+            <br>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
