--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h5>Building Web3 solutions based on Solana, cross-platform Mobile apps with Flutter, 
-              scalable backends with Django, Go and Rust, and modern web interfaces using React.js, Next.js and Tailwind.</h5>
+              scalable backends with Django, Go and Rust, and modern web interfaces using React.js, Next.js and Tailwind.
+            </h5>
     
             <br>
             <div class="row">
