--- a/index.html
+++ b/index.html
@@ -525,9 +525,10 @@
 
         <div class="section-title">
           <h2>Testimonials</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. 
-            Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. 
-            Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>
+            Don’t just take my word for it. Here are some testimonials from colleagues, clients, professors and tech leaders 
+            I’ve had the pleasure of working with.
+          </p>
         </div>
 
         <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
@@ -614,7 +615,7 @@
                 </p>
                 <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
                 <h3>Amine Touahria</h3>
-                <h4>Backend Engineer</h4>
+                <h4>Backend Engineer and Tech Leader</h4>
               </div>
             </div><!-- End testimonial item -->
 
@@ -643,7 +644,7 @@
                 </p>
                 <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
                 <h3>Djaafer Gueddou</h3>
-                <h4>Ai Engineer </h4>
+                <h4>Ai Engineer</h4>
               </div>
             </div><!-- End testimonial item -->
 
@@ -659,7 +660,7 @@
                 </p>
                 <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
                 <h3>Amine Saidi</h3>
-                <h4>DevOps Engineer </h4>
+                <h4>DevOps Engineer and Tech Leader</h4>
               </div>
             </div><!-- End testimonial item -->
 
@@ -840,10 +841,6 @@
         &copy; Copyright <strong><span>Abdeldjalil Chougui</span></strong>
       </div>
       <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
         Designed by Abdeldjalil Chougui
       </div>
     </div>
